# CodeClubIDE

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  electron-builder.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  dco.yml  release.yml
docs/: Reglas CodeClub.txt  Rules CodeClub.txt
rust-engine/: Cargo.toml
rust-engine/src/: codegraph.rs  dap.rs  main.rs  models.rs  search.rs  utils.rs
rust-engine/src/commands/: codeclub_nodes.rs  diff.rs  exec.rs  grep.rs  io.rs  mod.rs  read_range.rs  scan.rs  subagents.rs  topographic.rs
rust-engine/tree-sitter-vendored/: Cargo.toml  build.rs
rust-engine/tree-sitter-vendored/grammars/vhdl/: TokenTree.inc  TokenType.inc  token_tree_match.inc
rust-engine/tree-sitter-vendored/src/: lib.rs
scripts/: add-banner.mjs  build-engine.mjs  compile-bytenode.mjs  dev.mjs
src/main/: index.ts  ipc.ts
src/preload/: index.d.ts  index.ts  types.ts
src/renderer/: index.html
src/shared/: design.ts  designAutoLayout.ts  designBooleanOps.ts  designComponents.ts  designExport.ts  designImportValidation.ts  designLayers.ts  designLint.ts  designTokens.ts  structuralNodes.ts  studio.ts  topographicDiff.test.ts  topographicDiff.ts  topographicIdentity.ts  topographicNodes.ts
src/wasm-renderer/: Cargo.toml
src/wasm-renderer/src/: lib.rs  scene.rs
(+175 files in other folders)
