[package]
name = "codeclub-engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["tree-sitter-vendored"]

[dependencies]
base64 = "0.22"
blake3 = "1.8"
regex = "1.12.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2.7"
tree-sitter = "0.25"
tree-sitter-vendored = { path = "tree-sitter-vendored" }
tungstenite = "0.29.0"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4"] }
zstd = "0.13"

[profile.release]
strip = true
lto = true
codegen-units = 1
